...
  Widget build(BuildContext context, WidgetRef ref) {
    final themeMode = ref.watch(currentThemeModeProvider);
    
    return DynamicColorBuilder(
      builder: (context, lightColorScheme, darkColorScheme) {
        return MaterialApp(
          title: '个人记账助手',
          debugShowCheckedModeBanner: false,
          navigatorKey: NavigationService.navigatorKey,
          theme: lightColorScheme != null
              ? Material3Theme.lightTheme.copyWith(colorScheme: lightColorScheme)
              : Material3Theme.lightTheme,
          darkTheme: darkColorScheme != null
...
